--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'checkout_form/css/checkout_form.css' %}">
@@ -24,6 +25,53 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-12 col-lg-6 order-lg-last mb-5">
+                <div class="row">
+                    <div class="col-7 offset-2">
+                        <p class="mb-1 mt-0 small text-muted">Item</p>
+                    </div>
+                    <div class="col-3 text-right">
+                        <p class="mb-1 mt-0 small text-muted">Subtotal</p>
+                    </div>
+                </div>
+                {% for item in bag_items %}
+                <!------------------ Image links ------------------>
+                <div class="row">
+                    <div class="com-2 mb-1">
+                        <a href="{% url 'product_detail' item.product.id %}">
+                            {% if item.product.image %}
+                                <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product_name }}">
+                            {% else %}
+                                <img class="w-100" src="{{ MEDIA_URL }}" alt="{{ product_name }}">
+                            {% endif %}
+                        </a>
+                    </div>
+                    <!------------------ Product detail ------------------>
+                    <div class="col-7">
+                        <p class="bag-product-name">{{ item.product.name }}
+                        <p class="bag-product-size">Size: {% if item.product.product_sizes %}{{ item.size|lower }}{% endif %}</p>
+                        <p class="bag-product-name">Qty: {{ item.item_quantity }}
+                    </div>
+                    <!------------------ Product price calculation ------------------>
+                    <div class="col-3 text-right">
+                        <p class="bag-product-price">£ {{ item.product.price | calc_subtotal:item.item_quantity }}</p>
+                    </div>
+                </div>
+                {% endfor %}
+                <hr class="page-breaker">
+                <!------------------ Order cost & delivery ------------------>
+                <div class="row text-white text-right">
+                    <div class="col-7 offset-2">
+                        <p class="text-white my-0">Bag Total:</p>
+                        <p class="text-white my-0">Delivery Charges:</p>
+                        <p class="text-white my-0">Grand Total:</p>
+                    </div>
+                    <div class="col-3">
+                        <p class="text-white my-0">£ {{ bag_total | floatformat:2 }}</p>
+                        <p class="text-white my-0">£ {{ delivery_total | floatformat:2 }}</p>
+                        <p class="text-white my-0">£ {{ grand_total | floatformat:2 }}</p>
+                    </div>
+                </div>
             <div class="col-12 col-lg-6">
                 <p class="text-white">Fill out the details below and you're good to go</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
@@ -45,21 +93,27 @@
                             {{ new_order_form.county | as_crispy_field }}
                             {{ new_order_form.postcode| as_crispy_field }}
                             {{ new_order_form.country | as_crispy_field }}
-                        <div class="form-check form-check-inline float-right mr-0">
-                            <!------------------ Accout signup/login/save info buttons and inputs ------------------>
-                            {% if user.is_authenticated %}
-                                <label class="form-check-label" for="id-save-info">Save info</label>
-                                <input class="form-check-input ml-2 mr-0" type="checkbox"  id="id-save-info" name="save-info" checked>
-                            {% else %}
-                                <label class="form-check-label" for="id-save-info">
-                                    <a class="text-info"  href="">Create an account here</a>
-                                    <a class="text-info"  href="">Login</a>
-                                </label>
-                            {% endif %}
-                        </div>
-                    </fieldset>
+                            <div class="form-check form-check-inline float-right mr-0">
+                                <!------------------ Accout signup/login/save info buttons and inputs ------------------>
+                                {% if user.is_authenticated %}
+                                    <label class="form-check-label" for="id-save-info">Save info</label>
+                                    <input class="form-check-input ml-2 mr-0" type="checkbox"  id="id-save-info" name="save-info" checked>
+                                {% else %}
+                                    <label class="form-check-label" for="id-save-info">
+                                        <a class="text-info"  href="">Create an account here</a>
+                                        <a class="text-info"  href="">Login</a>
+                                    </label>
+                                {% endif %}
+                            </div>
+                        </fieldset>
                     <fieldset class="px-3">
+                    <!------------------ Payments and stripe elements ------------------>
+                        <legend class="fieldset-label small text-white px-2 w-auto">Payment Details</legend>
+                        <!-- Stripe -->
+                        <div class="mb-3" id="card-element"></div>
 
+                        <!-- Form errors -->
+                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                     </fieldset>
                 </form>
             </div>
