--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -115,7 +115,7 @@
                         <div class="mb-3" id="card-element"></div>
 
                         <!-- Form errors -->
-                        <div class="mb-3 text-danger" id="card-invalid" role="alert"></div>
+                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                     </fieldset>
                     <div class="submit-button text-right mt-5 mb-2">                    
 						<a href="{% url 'bag' %}" class="adjust btn btn-outline-black rounded-0">
