--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -145,8 +145,8 @@
 
 {% block postloadjs %}
     {{ block.super }}
-        {{ stripe_publishable_key|json_script:"id_stripe_publishable_key" }}
-        {{ stripe_secret_key|json_script:"id_stripe_secret_key" }}
+        {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+        {{ client_secret|json_script:"id_client_secret" }}
         <script src="{% static 'checkout_form/stripe/stripe.js' %}"></script>
 {% endblock %}
 
