--- a/store_checkout/templates/store_checkout/checkout_done.html
+++ b/store_checkout/templates/store_checkout/checkout_done.html
@@ -21,5 +21,11 @@
                 <p class="page-comment">Thank you for your order.</p>
             </div>
         </div>
+        <a href="{% url 'products' %}?category=sale" class="btn btn-black rounded-0 my-2">
+            <span class="icon mr-2">
+                <i class="fas fa-gifts"></i>
+            </span>
+            <span class="text-uppercase">Before you go why not check our our products on offer</span>
+        </a>
     </div>
 {% endblock %}
