Adde inline styling and link to sale section in the checkout done html page

--- a/store_checkout/static/checkout_form/css/checkout_form.css
+++ b/store_checkout/static/checkout_form/css/checkout_form.css
@@ -28,6 +28,10 @@ p.subtotal-text.mb-1.mt-0.small {
     color: #17a2b8;
 }
 
+span.here-button-text {
+    color: #17a2b8 !important;
+}
+
 
 /*---------- Buttons ----------*/
 
