--- a/store_checkout/templates/store_checkout/checkout_done.html
+++ b/store_checkout/templates/store_checkout/checkout_done.html
@@ -17,15 +17,14 @@
         <div class="row">
             <div class="col">
                 <h2 class="page-title mt-5 text-center">Success!</h2>
+                <p class="page-comment mb-5 text-white text-center">Thank you for your order.</p>
                 <hr class="page-breaker">
-                <p class="page-comment">Thank you for your order.</p>
             </div>
         </div>
-        <a href="{% url 'products' %}?category=sale" class="btn btn-black rounded-0 my-2">
-            <span class="icon mr-2">
-                <i class="fas fa-gifts"></i>
-            </span>
-            <span class="text-uppercase">Before you go why not check our our products on offer</span>
-        </a>
+        <p class="text-white text-center">Before you go why not check our our products on offer in our sale section
+            <a href="{% url 'products' %}?category=sale" class="btn btn-black rounded-0 my-2 text-center">
+                <span class="here-button-text" style="color: #17a2b8">Here</span>
+            </a>
+        </p>
     </div>
 {% endblock %}
