--- a/static/css/base.css
+++ b/static/css/base.css
@@ -587,9 +587,24 @@ span.bag-pop-checkout.text-uppercase {
     padding: 7px;
 }
 
+/*---------- Post checkout success styling ----------*/
+
 p.text-white.text-center,
 span.here-button-text {
     font-size: 23px;
+}
+
+.row.order-details {
+    justify-content: center;
+}
+
+p.mb-0.text-white {
+    font-size: 14px;
+}
+
+hr {
+    margin-bottom: 1px;
+    border: 0;
 }
 
 /*--------------- Media Queries ---------------*/
