--- a/store_checkout/templates/store_checkout/checkout_done.html
+++ b/store_checkout/templates/store_checkout/checkout_done.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -21,9 +20,188 @@
                 <hr class="page-breaker">
             </div>
         </div>
-        <p class="text-white text-center">Before you go why not check our our products on offer in our sale section
+        <div class="row order-details">
+            <div class="col-12 col-lg-7">
+                <div class="order-confirmation-wrapper">
+                    <div class="row">
+                        <div class="col">
+                            <small class="font-weight-bold p-0" style="color: #17a2b8; font-family: 'Montserrat'; font-size: 20px;"><i class="far fa-list-alt"></i>  Order Info</small>
+                            <br>
+                        </div>
+                    </div>
+                    <!-------------------- Order Info -------------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Order Number</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-white text-md-right">
+                            <p class="mb-0">{{ order.order_number }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Order Date</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.date }}</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <!-------------------- Product Details -------------------->
+                    <div class="row">
+                        <div class="col">
+                            <small class="font-weight-bold" style="color: #17a2b8; font-family: 'Montserrat'; font-size: 20px;"><i class="fas fa-list-ol"></i>  Order Details</small>
+                        </div>
+                    </div>
+                    {% for item in order.lineitems.all %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="small mb-0 text-white">
+                                {{ item.product.name }}{% if item.product_size %} - Size {{ item.product_size|upper }}{% endif %}
+                            </p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="small mb-0 text-white">{{ item.item_quantity }} x £{{ item.product.price }}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    <hr>
+                    <!-------------------- Delivery Info -------------------->
+                    <div class="row">
+                        <div class="col">
+                            <small class="font-weight-bold" style="color: #17a2b8; font-family: 'Montserrat'; font-size: 20px;"><i class="fas fa-truck"></i>  Delivery</small>
+                        </div>
+                    </div>
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">First Name</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.first_name }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Last Name</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.last_name }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Address 1</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.address1 }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                    {% if order.address2 %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Address 2</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.address2 }}</p>
+                        </div>
+                    </div>
+                    {% endif %}
+                    <!-------------->
+                    {% if order.county %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">County</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.county }}</p>
+                        </div>
+                    </div>
+                    {% endif %}
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Town or City</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.town_or_city }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                    {% if order.postcode %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Postcode</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.postcode }}</p>
+                        </div>
+                    </div>
+                    {% endif %}
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Country</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.country }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Phone Number</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.phone_number }}</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <!-------------------- Billing Info -------------------->
+                    <div class="row">
+                        <div class="col">
+                            <small class="font-weight-bold" style="color: #17a2b8; font-family: 'Montserrat'; font-size: 20px;"><i class="far fa-money-bill-alt"></i>  Billing</small>
+                        </div>
+                    </div>
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Order Total</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.bag_total }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Delivery</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.delivery_total }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-white">Grand Total</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0 text-white">{{ order.grand_total }}</p>
+                        </div>
+                    </div>
+                    <!-------------->
+                </div>
+            </div>
+        </div>
+        <hr class="page-breaker">
+        <p class="text-white text-center mt-5">Before you go why not check our our products on offer in our sale section
             <a href="{% url 'products' %}?category=sale" class="btn btn-black rounded-0 my-2 text-center">
-                <span class="here-button-text" style="color: #17a2b8">Here</span>
+                <span class="here-button-text" style="color: #17a2b8; text-decoration: underline;">Here</span>
             </a>
         </p>
     </div>
