--- a/store_checkout/templates/store_checkout/checkout_done.html
+++ b/store_checkout/templates/store_checkout/checkout_done.html
@@ -168,7 +168,7 @@
                             <p class="mb-0 text-white">Order Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.bag_total }}</p>
+                            <p class="mb-0 text-white">£{{ order.bag_total }}</p>
                         </div>
                     </div>
                     <!-------------->
@@ -177,7 +177,7 @@
                             <p class="mb-0 text-white">Delivery</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.delivery_total }}</p>
+                            <p class="mb-0 text-white">£{{ order.delivery_total }}</p>
                         </div>
                     </div>
                     <!-------------->
@@ -186,7 +186,7 @@
                             <p class="mb-0 text-white">Grand Total</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0 text-white">{{ order.grand_total }}</p>
+                            <p class="mb-0 text-white">£{{ order.grand_total }}</p>
                         </div>
                     </div>
                     
