Base.css: Added button styling for bag pop up, widened buttons and also added a view bag button with url to bag page, Toast-success: Added url to a new view bag button

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -254,6 +254,17 @@ span.exit.button {
     text-decoration: underline;
 }
 
+/*---------- Toast bag pop up ----------*/
+span.bag-pop-checkout.text-uppercase {
+    display: inline-block;
+    color: #fafafa;
+    border: 1px solid #fafafa;
+    width: 66%;
+    font-size: 14px;
+    padding: 7px;
+    min-width: -webkit-fill-available;
+}
+
 /*---------- Toast - cappers ----------*/
 
 .w-100.toast-capper.danger {
