--- a/templates/includes/toast_notifications/toast_success.html
+++ b/templates/includes/toast_notifications/toast_success.html
@@ -41,11 +41,11 @@
                             Spend <strong>£{{ free_delivery_delta }}</strong> more to get free next day delivery!
                         </p>
                     {% endif %}
-                    <a href="{% url 'bag' %}" class="btn btn-black btn-block rounded-0">
+                    <a href="{% url 'checkout' %}" class="btn btn-black btn-block rounded-0">
                         <span class=" bag-pop-checkout text-uppercase">Go To Secure Checkout</span>
-                        <span class="icon">
-                            <i class="fas fa-lock"></i>
-                        </span>
+                    </a>
+                    <a href="{% url 'bag' %}" class="btn btn-black btn-block rounded-0">
+                        <span class=" bag-pop-checkout text-uppercase">View Bag</span>
                     </a>
                 </div>
             </div>
