--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -113,9 +113,10 @@
                         <legend class="fieldset-label small text-white px-2 w-auto">Payment Details</legend>
                         <!-- Stripe -->
                         <div class="mb-3" id="card-element"></div>
-
                         <!-- Form errors -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <!-- Getting payment intent id when passed to the client secret to the view -->
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
                     <div class="submit-button text-right mt-5 mb-2">                    
 						<a href="{% url 'bag' %}" class="adjust btn btn-outline-black rounded-0">
