--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -142,6 +142,15 @@
             </div>
         </div>
     </div>
+    <div id="loading-overlay">
+        <h1 class="text-light logo-font loading-spinner text-center">
+            <span class="icon">
+                <p class="text-white text-center mb-5">We're just getting your order...</p>
+                <hr>
+                <i class="fas fa-2x fas fa-dumbbell fa-spin" style="color: #17a2b8;"></i>
+            </span>
+        </h1>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
