--- a/store_checkout/static/checkout_form/css/checkout_form.css
+++ b/store_checkout/static/checkout_form/css/checkout_form.css
@@ -32,6 +32,23 @@ span.here-button-text {
     color: #17a2b8 !important;
 }
 
+#loading-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    z-index: 9999;
+}
+.loading-spinner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 100%;
+  }
 
 /*---------- Buttons ----------*/
 
