--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,8 +7,9 @@
 
 
 {% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
-
+<hr>
+<h2 class="page-title text-center">{% trans "Confirm Email Address" %}</h2>
+<hr>
 {% if confirmation %}
 
 {% user_display confirmation.email_address.user as user_display %}
