--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -7,7 +7,9 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
+<hr>
+<h2 class="page-title text-center">{% trans "Password Reset" %}</h2>
+<hr>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
