--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,7 +5,9 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+<hr>
+<h2 class="page-title text-center">{% trans "Set Password" %}</h2>
+<hr>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
