--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -5,7 +5,9 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Verify Your E-mail Address" %}</h1>
+<hr>
+<h2 class="page-title text-center">{% trans "Verify Your Email Address" %}</h2>
+<hr>
 
 {% url 'account_email' as email_url %}
 
