--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,6 +5,7 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
+
 {% block login_content %}
 
 <hr>
@@ -31,8 +32,8 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+<p class="login-signup-text">{% blocktrans %}If you have not created an account yet, then please
+<a href="{{ signup_url }}" style="color: #17a2b8;" class="a.shop-button.btn.btn-lg.text-white.rounded-0.text-capitalize.py-3">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
@@ -41,11 +42,11 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-black rounded-0 btn-lg" href="{% url 'home' %}">Back To Home</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
   <p class="mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </p>
+  <a class="btn back-home" href="{% url 'home' %}">Back To Home</a>
+  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
 </form>
 
 {% endblock %}
