Updated card border in css file

--- a/templates/includes/toast_notifications/toast_success.html
+++ b/templates/includes/toast_notifications/toast_success.html
@@ -7,6 +7,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+    <div class="container-checkout"></div>
     <div class="toast-body">
         <div class="row">
             <div class="col">
@@ -51,4 +52,5 @@
             </div>
         {% endif %}
     </div>
+</div>
 </div>
