--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -54,7 +54,7 @@
             <div class="row">
                 {% for product in products %}
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                        <div class="card border-0">
+                        <div class="card product-card">
                             {% if product.image %}
                             <a href="{% url 'individual_product' product.id %}">
                                 <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
