--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,6 +27,26 @@ body {
     justify-content: center;
     background-color: transparent;
 }
+.checkout-overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: -1;
+    opacity: 1;
+    height: 105vh;
+    background: url('/media/checkout-overlay.jpg') no-repeat center center fixed;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+}
+.container.mb-2 {
+    background: url(/media/checkout-overlay.jpg) no-repeat center center fixed;
+    margin-top: 4%;
+}
 
 /*--------------- Allauth ---------------*/
 .image-overlay {
@@ -39,6 +59,23 @@ body {
     opacity: 1;
     height: 105vh;
     background: url('/media/new-image.jpg') no-repeat center center fixed;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+}
+
+.detail-overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: -1;
+    opacity: 1;
+    height: 105vh;
+    background: url('/media/detail-overlay.jpg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -175,7 +212,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.w-100 {
 
 a#all-products-link {
     color: #fafafa;
-    font-weight: 600;
+    font-size: 19px;
+    
 }
 a#all-products-link:hover {
     color: #f0f005;
@@ -183,7 +221,8 @@ a#all-products-link:hover {
 
 a#mens-link {
     color: #fafafa;
-    font-weight: 600;
+    font-size: 19px;
+    
 }
 a#mens-link:hover {
     color: #f0f005;
@@ -191,7 +230,8 @@ a#mens-link:hover {
 
 a#womens-link {
     color: #fafafa;
-    font-weight: 600;
+    font-size: 19px;
+    
 }
 a#womens-link:hover {
     color: #f0f005;
@@ -199,7 +239,8 @@ a#womens-link:hover {
 
 a#accessories-link {
     color: #fafafa;
-    font-weight: 600;
+    font-size: 19px;
+    
 }
 a#accessories-link:hover {
     color: #f0f005;
@@ -207,10 +248,18 @@ a#accessories-link:hover {
 
 a#sales-link {
     color: #fafafa;
-    font-weight: 600;
+    font-size: 19px;
+    
 }
 a#sales-link:hover {
     color: #f0f005;
+}
+
+div#topnav {
+    background-color: #000305b8 !important;
+}
+.row.navbar-row {
+    background-color: #000305b8;
 }
 
 
@@ -229,13 +278,15 @@ a#sales-link:hover {
 }
 i.fas.fa-bars {
     display: block;
+    color: #fafafa;
 }
 
 /*---------- Search Box ----------*/
 
 input.form-control.search-bar.text-white.rounded-0 {
-    background-color: #000;
+    background-color: #00000080;
     text-transform: capitalize;
+    color: #fafafa;
 }
 
 .fa-search {
@@ -318,9 +369,23 @@ a.product-count:hover {
 }
 
 select#sort-selector {
-    background-color: black;
+    background-color: #00000080;
     border-color: #fafafa !important;
     color: #fafafa;
+}
+
+.card.product-card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #17a2b8;
+    border-radius: .25rem;
 }
 
 /*---------- Toast messages ----------*/
@@ -525,19 +590,31 @@ input.form-control.qty_input {
     width: 30%;
 }
 
+.form-group.quantity-box {
+    width: 107%;
+    color: #fafafa;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 
 /*---------- Individual Products Page - Buttons ----------*/
 
-span.text-uppercase {
+span.product-detail.text-uppercase.mt-5 {
     color: #fafafa;
     border: 1px solid #fafafa;
-    padding: 10px;
+    padding: 11px;
+    margin-top: 9px;
+    padding-top: 8px;
+    padding-bottom: 11px;
+    background-color: black;
 }
 
 input.btn.btn-black.text-uppercase {
     color: #fafafa;
     border: 1px solid #fafafa;
     padding: 7px;
+    background-color: black;
 }
 
 /*---------- Shopping bag page ----------*/
@@ -862,6 +939,14 @@ body {
 
 .increment-qty, .decrement-qty {
     padding: .25rem .5rem !important;
+}
+
+.form-group.quantity-box {
+    width: 107%;
+    color: #fafafa;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: transparent;
 }
 
 input.btn.btn-black.text-uppercase {
