--- a/templates/base.html
+++ b/templates/base.html
@@ -106,8 +106,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="row bg-dark">
-                <nav class="navbar navbar-expand-lg navbar-dark w-100">
+            <div class="row navbar-row">
+                <nav class="navbar navbar-expand-lg w-100">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler"><i class="fas fa-bars"></i></span>
                     </button>
