User profile html: passed in templating to render users name to page, updated user_profile view for functionality to render users information to profile page

--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -91,22 +91,22 @@
                     <!------------------ Page breaker hr positioning for screen sizes ------------------>
                     {% if forloop.counter|divisibleby:1 %}
                         <div class="col-12 d-sm-none">
-                            <hr class="page-breaker">
+                            <hr class="product page-breaker">
                         </div>
                     {% endif %}                        
                     {% if forloop.counter|divisibleby:2 %}
                         <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-3">
-                            <hr class="page-breaker">
+                            <hr class="product page-breaker">
                         </div>
                     {% endif %}
                     {% if forloop.counter|divisibleby:3 %}
                         <div class="col-12 d-none d-lg-block d-xl-none mb-3">
-                            <hr class="page-breaker">
+                            <hr class="product page-breaker">
                         </div>
                     {% endif %}
                     {% if forloop.counter|divisibleby:4 %}
                         <div class="col-12 d-none d-xl-block mb-3">
-                            <hr class="page-breaker">
+                            <hr class="product page-breaker">
                         </div>
                     {% endif %}
                 {% endfor %}
