--- a/shopping_bag/templates/shopping_bag/shopping_bag.html
+++ b/shopping_bag/templates/shopping_bag/shopping_bag.html
@@ -11,8 +11,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container mb-2">
+    <div class="bag-overlay"></div>
+    <div class="container">
         <!------------------ Page title ------------------>
         <div class="row">
             <div class="col">
