--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -14,12 +14,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container mb-2">
+    <div class="profile-overlay"></div>
+    <div class="container">
         <!------------------ Page title ------------------>
         <div class="row">
             <div class="col">
-                <h2 class="page-title mt-5 text-center">Welcome back render users name in jinja templete here!</h2>
+                <h2 class="page-title mt-5 text-center">Welcome back "{{ profile }}"</h2>
                 <hr>
             </div>
         </div>
