--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -42,11 +42,11 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
+  <a class="btn back-home" href="{% url 'home' %}">Home</a>
+  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
   <p class="mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </p>
-  <a class="btn back-home" href="{% url 'home' %}">Back To Home</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
 </form>
 
 {% endblock %}
