--- a/templates/base.html
+++ b/templates/base.html
@@ -67,25 +67,23 @@
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                         <li class="list-inline-item dropdown">
-                            <!-- parent menu -->
-                            <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <div class="text-center">
-                                    <div><i class="far fa-user fa-lg"></i></div>
-                                    <p class="account-button my-0">My Account</p>
+                            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <div class="text-center text-white">
+                                    <div><i class="far fa-user"></i></i></div>
+                                    <p class="my-0">My Account</p>
                                 </div>
                             </a>
                             <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                                <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                                    {% if request.user.is_authenticated %}
-                                        {% if request.user.is_superuser %}
-                                            <a href="{% url 'account_logout' %}" class="dropdown-item">Manage your products</a>
-                                        {% endif %}
-                                        <a href="" class="dropdown-item">Your Profile</a>
-                                        <a href="{% url 'account_logout' %}" class="dropdown-item">Account Logout</a>
-                                    {% else %}
-                                        <a href="{% url 'account_signup' %}" class="dropdown-item">Account Register</a>
-                                        <a href="{% url 'account_login' %}"class="dropdown-item">Account Login</a>
+                                {% if request.user.is_authenticated %}
+                                    {% if request.user.is_superuser %}
+                                        <a href="" class="dropdown-item">Product Management</a>
                                     {% endif %}
+                                    <a href="{% url 'user_profile' %}" class="dropdown-item">My Profile</a>
+                                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                {% else %}
+                                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                                {% endif %}
                             </div>
                         </li>
                         <!-- shopping bag link -->
