Updated code block names to add padding to all auth forms

--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
-{% block content %}
+{% block allauth_content %}
 <hr>
 <h2 class="page-title text-center">{% trans "Confirm Email Address" %}</h2>
 <hr>
