--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 
-{% block login_content %}
+{% block allauth_content %}
 
 <hr>
 <h2 class="page-title text-center">{% trans "Sign In" %}</h2>
