--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block content %}
+{% block allauth_content %}
 <hr>
 <h2 class="page-title text-center">{% trans "Account Inactive" %}</h2>
 <hr>
