--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Account" %}{% endblock %}
 
-{% block content %}
+{% block allauth_content %}
 <hr>
 <h2 class="page-title text-center">{% trans "Email Addresses" %}</h2>
 <hr>
