--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -4,19 +4,19 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
+{% block allauth_content %}
 <hr>
 <h2 class="page-title text-center">{% trans "Sign Out" %}</h2>
 <hr>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p class="logout-text">{% trans 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button class="logout-button" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
 
