--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
+{% block allauth_content %}
 <hr>
 <h2 class="page-title text-center">{% trans "Change Password" %}</h2>
 <hr>
