--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
+{% block allauth_content %}
 <hr>
 <h2 class="page-title text-center">{% trans "Sign Up" %}</h2>
 <hr>
