--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
-{% block content %}
+{% block allauth_content %}
 <hr>
 <h2 class="page-title text-center">{% trans "Sign Up Closed" %}</h2>
 <hr>
