--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -4,7 +4,8 @@
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
-{% block content %}
+{% block allauth_content %}
+
 <hr>
 <h2 class="page-title text-center">{% trans "Verify Your Email Address" %}</h2>
 <hr>
