--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -9,5 +9,5 @@
 <h2 class="page-title text-center">{% trans "Account Inactive" %}</h2>
 <hr>
 
-<p>{% trans "This account is inactive." %}</p>
+<p class="allauth-text">{% trans "This account is inactive." %}</p>
 {% endblock %}
