--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -15,7 +15,7 @@
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
+<p class="allauth-text">{% blocktrans with site.name as site_name %}Please sign in with one
 of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
 for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
@@ -32,7 +32,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p class="login-signup-text">{% blocktrans %}If you have not created an account yet, then please
+<p class="allauth-text">{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}" style="color: #17a2b8;" class="a.shop-button.btn.btn-lg.text-white.rounded-0.text-capitalize.py-3">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
@@ -44,7 +44,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% endif %}
   <a class="btn back-home" href="{% url 'home' %}">Home</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-  <p class="mt-2">
+  <p class="allauth-text mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </p>
 </form>
