--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -7,5 +7,5 @@
 <hr>
 <h2 class="page-title text-center">{% trans "Change Password" %}</h2>
 <hr>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <p class="allauth-text">{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
