--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -9,15 +9,15 @@
 <h2 class="page-title text-center">{% trans "Sign Up" %}</h2>
 <hr>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p class="allauth-text">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}"  style="color: #17a2b8; font-size: 19px;">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button class="allauth-button" type="submit">{% trans "Sign Up" %} &raquo;</button>
 </form>
 
 {% endblock %}
