--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -5,11 +5,8 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block allauth_content %}
-
-<hr>
-<h2 class="page-title text-center">{% trans "Verify Your Email Address" %}</h2>
-<hr>
-
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
+    <hr>
+        <h2 class="page-title text-center">{% trans "Verify Your Email Address" %}</h2>
+    <hr>
+    <p class="allauth-text">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 {% endblock %}
