--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -19,8 +19,25 @@
         <!------------------ Page title ------------------>
         <div class="row">
             <div class="col">
-                <h2 class="page-title mt-5 text-center">Welcome back "{{ profile }}"</h2>
+                <h2 class="page-title mt-5 text-center"><p class="username">{{ user }}</p></h2>
                 <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <p class="form-title">Your delivery information</p>
+                <form class="mt-3" action="{% url 'profile' %" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class=" btn-btn-black-rounded-0 update-profile float-right">Update</button>
+                </form>
+                <br>
+                <br>
+                <hr class="page-breaker">
+                <div class="col-12 col-lg-6">
+                    <p class="form-title">Order History</p>
+                    <p class="text-white">{{ orders }}</p>
+                </div>
             </div>
         </div>
 {% endblock %}
