User_profile.html: updated form|crispy templating to alow user to post infrmation to the database, base.css: added styling for allauth form fields in thje profile page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -810,7 +810,9 @@ hr {
 }
 /*--------------- Profile ---------------*/
 
-
+input[name='q']::placeholder {
+    color: #604b4ba6;
+}
 p.username {
     color: #17a2b8;
     font-weight: 700;
