--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="form-title">Your delivery information</p>
-                <form class="mt-3" action="{% url 'profile' %" method="POST" id="profile-update-form">
+                <form class="mt-3" action="{% url 'user_profile' %" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <button class=" btn-btn-black-rounded-0 update-profile float-right">Update</button>
@@ -41,3 +41,21 @@
             </div>
         </div>
 {% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        let countrySelected = $('#id_default_country').val();
+        if(!countrySelected) {
+            $('#id_default_country').css('color', '##00000091');
+        };
+        $('#id_default_country').change(function() {
+            countrySelected = $(this).val();
+            if(!countrySelected) {
+                $(this).css('color', '#00000091');
+            } else {
+                $(this).css('color', '#fafafa')
+        }
+    });
+    </script>
+ {% endblock %}
