--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
                                     <div><i class="fas fa-cart-arrow-down"></i></div>
                                     <p class="my-0">
                                         {% if grand_total %}
-                                            ${{ grand_total|floatformat:2 }}
+                                            £{{ grand_total|floatformat:2 }}
                                         {% else %}
                                             $0.00
                                         {% endif %}
