--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -31,8 +31,43 @@
                 <br>
                 <hr class="page-breaker">
                 <div class="col-12 col-lg-6">
-                    <p class="form-title">Order History</p>
-                    <p class="text-white">{{ orders }}</p>
+                    <p class="form-title">{{ user }}'s Order History</p>
+                    <div class="order-history-table table-responsive">
+                        <div class="table table-sm">
+                            <thead>
+                                <tr>
+                                    <th>Order Number</th>
+                                    <th>Date</th>
+                                    <th>Items</th>
+                                    <th>Order Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for order in orders %}
+                                <tr>
+                                    <td>
+                                        <a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number|truncatechars:10 }}">
+                                            {{ order.order_number|truncatechars:10 }}
+                                        </a>
+                                    </td>
+                                    <td>{{ order.date }}</td>
+                                    <td> 
+                                        <ul>
+                                            {% for item in order.lineitems.all %}
+                                                <li>
+                                                    {% if item.product.product_sizes %}
+                                                    Size {{ item.product.size|lower }}{% endif %}
+                                                    {{ item.product.name }} x {{ item.item_quantity }}
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    </td>
+                                    <td>£{{ order.grand_total }}</td>
+                                </tr>
+                            {% endfor %} 
+                            </tbody>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
